--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
           >
             <path
               d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"
-            /></svg
-        ></a>
+            />
+          </svg>
+        </a>
         <a href="pagina6.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -78,8 +79,9 @@
           >
             <path
               d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"
-            /></svg
-        ></a>
+            />
+          </svg>
+        </a>
         <a href="pagina7.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -92,8 +94,9 @@
             <path
               fill-rule="evenodd"
               d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14"
-            /></svg
-        ></a>
+            />
+          </svg>
+        </a>
       </nav>
     </header>
     <!-- Cuerpo de la página donde aparece el contenido -->
@@ -126,39 +129,91 @@
           alt="Imagen4"
         />
       </section>
+
       <!-- Parte donde se habla de nuestra tienda -->
       <section id="informacion">
+        <img
+          src="imagenes/banner1.jpg.png"
+          alt="Ofertas"
+          class="banner"
+        />
         <article>
           <p>
             Nuestros productos son 100% veganos ya que contamos con una política
             muy estricta <em>cruelty free</em>.
           </p>
         </article>
+        <img
+          src="imagenes/imagenindex1.png"
+          alt="Ofertas"
+          class="banner"
+        />
+        <br />
         <article>
           <p>
             Nuestros envases están hechos de plástico reciclado ya que nuestra
             prioridad número 1 es cuidar nuestro planeta.
           </p>
         </article>
+        <img
+          src="imagenes/imagenindex2.png"
+          alt="Ofertas"
+          class="banner"
+        />
       </section>
       <!-- Parte donde aparecen promociones -->
       <section id="promociones">
         <article>
           <p>Prueba nuestro nuevo pintalabios hidratante.</p>
+          <br />
+          <img
+            src="imagenes/produc1.png"
+            alt="Ofertas"
+            class="promo"
+          />
         </article>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
         <article>
           <p>Prueba nuestra nueva mascarilla de frutas tropicales.</p>
+          <br />
+          <img
+            src="imagenes/produc2.png"
+            alt="Ofertas"
+            class="promo"
+          />
         </article>
       </section>
       <!-- Parte donde aparecen ofertas y el calendario de cursos -->
       <aside>
+        <img
+          src="imagenes/oferta2.png"
+          alt="Ofertas"
+          class="oferta"
+        />
+
+        <img
+          src="imagenes/promo3.png"
+          alt="Ofertas"
+          class="oferta"
+        />
         <h2>OFERTAS</h2>
+        <br />
         <iframe
           src="https://calendar.google.com/calendar/embed?src=c_4328d9383a17410a02f2c553cfc894efafd03b873cf37fad0536de3368685a7c%40group.calendar.google.com&ctz=Europe%2FMadrid"
           style="border: 0"
           frameborder="0"
           scrolling="no"
         ></iframe>
+        <img
+          src="imagenes/oferta1.png"
+          alt="Ofertas"
+          class="oferta"
+        />
+        <img
+          src="imagenes/promo4.png"
+          alt="Ofertas"
+          class="oferta"
+        />
       </aside>
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
@@ -178,31 +233,52 @@
           href="https://www.instagram.com/"
           target="_blank"
         >
-          <img
-            src="icons/instagram.svg"
-            alt="Logo de Instagram"
-            title="Logo Insta"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-instagram"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
+            />
+          </svg>
         </a>
         <a
           href="https://www.tiktok.com/"
           target="_blank"
         >
-          <img
-            src="icons/tiktok.svg"
-            alt="Logo de Tiktok"
-            title="Logo Tiktok"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-tiktok"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"
+            />
+          </svg>
         </a>
         <a
           href="https://www.youtube.com/"
           target="_blank"
         >
-          <img
-            src="icons/youtube.svg"
-            alt="Logo de YouTube"
-            title="Logo Youtube"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-youtube"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
+            />
+          </svg>
         </a>
       </nav>
 
