--- a/pagina5.html
+++ b/pagina5.html
@@ -121,7 +121,6 @@
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
       <!-- Formulario de presupuesto sobre los diferentes productos de la tienda -->
-      <h1>Presupuesto</h1>
       <form
         action="procesamiento_formulario.php"
         method="get"
@@ -139,9 +138,8 @@
               contigo!</em
             >
           </p>
-          <br />
           <p>
-            <strong> Nombre: </strong>
+            <strong> Nombre </strong>
             <input
               type="text"
               name="nombre"
@@ -150,12 +148,12 @@
             />
           </p>
           <p>
-            <strong> Teléfono: </strong>
+            <strong> Teléfono </strong>
             <input type="text" name="telefono" size="25" pattern="[0-9]{9}" r
             required
           </p>
           <p>
-            <strong> Email: </strong>
+            <strong> Email </strong>
             <input
               type="email"
               name="email"
@@ -165,7 +163,6 @@
           </p>
         </fieldset>
 
-        <br />
         <!-- Parte donde se eligen los diferentes productos y el rango de precio deseado a gastar -->
         <fieldset>
           <legend>
@@ -179,7 +176,7 @@
             <em>Elige tu en que y cuanto quieres gastarte</em>
           </p>
           <p>
-            <strong> Rango precio: </strong>
+            <strong> Rango precio </strong>
             15 &#8364;
             <input
               type="range"
@@ -192,7 +189,7 @@
             100 &#8364;
           </p>
           <p>
-            <strong>Ojos: </strong>
+            <strong>Ojos </strong>
             <input
               type="checkbox"
               name="ojos"
@@ -207,7 +204,7 @@
             Lash Idole
           </p>
           <p>
-            <strong>Labios: </strong>
+            <strong>Labios </strong>
             <input
               type="checkbox"
               name="labios"
@@ -222,7 +219,7 @@
             Gloss Bomb Cream
           </p>
           <p>
-            <strong>Mascarillas:</strong>
+            <strong>Mascarillas</strong>
             <input
               type="checkbox"
               name="cara"
@@ -237,7 +234,7 @@
             Mascarilla Facial Hydra Bomb Calmante
           </p>
           <p>
-            <strong>Uñas:</strong>
+            <strong>Uñas</strong>
             <input
               type="checkbox"
               name="unias"
@@ -253,7 +250,6 @@
           </p>
         </fieldset>
 
-        <br />
         <!-- Parte donde se personalizan los productos del pedido -->
         <fieldset>
           <legend>
@@ -271,14 +267,14 @@
             <legend><h3>Ojos</h3></legend>
             <h4>Hypnôse Drama</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoOjos1"
@@ -295,14 +291,14 @@
             <hr />
             <h4>Lash Idole</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoOjos2"
@@ -317,7 +313,7 @@
               Original
             </p>
             <p>
-              <strong> Color: </strong>
+              <strong> Color </strong>
               <input
                 type="radio"
                 name="colorOjos2"
@@ -350,14 +346,14 @@
             </legend>
             <h4>Gloss Bomb Stix</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoLabios1"
@@ -372,7 +368,7 @@
               Original
             </p>
             <p>
-              <strong> Color: </strong>
+              <strong> Color </strong>
               <input
                 type="radio"
                 name="colorLabios1"
@@ -410,14 +406,14 @@
             <hr />
             <h4>Gloss Bomb Cream</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoLabios2"
@@ -432,7 +428,7 @@
               Original
             </p>
             <p>
-              <strong> Color: </strong>
+              <strong> Color </strong>
               <input
                 type="radio"
                 name="colorLabios2"
@@ -476,14 +472,14 @@
             </legend>
             <h4>Blue Me Glitter Top Coat</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoUnias1"
@@ -500,14 +496,14 @@
             <hr />
             <h4>Breather Nail Lacquer</h4>
             <p>
-              <strong> Cantidad: </strong>
+              <strong> Cantidad </strong>
               <input
                 type="number"
                 min="0"
               />
             </p>
             <p>
-              <strong> Tamaño: </strong>
+              <strong> Tamaño </strong>
               <input
                 type="radio"
                 name="tamañoUnias2"
@@ -522,14 +518,14 @@
               Original
             </p>
             <p>
-              <strong> Efecto: </strong>
+              <strong> Efecto </strong>
               <select name="efecto">
                 <option value="mate">Mate</option>
                 <option value="brillo">Brillo</option>
               </select>
             </p>
             <p>
-              <strong> Color: </strong>
+              <strong> Color </strong>
               <input
                 type="radio"
                 name="colorUnias2"
@@ -576,7 +572,7 @@
             <em> ¡Por último, ultimemos detalles! </em>
           </p>
           <p>
-            <strong>Fecha:</strong>
+            <strong>Fecha</strong>
             <input
               type="date"
               name="fecha_reparto"
@@ -586,7 +582,7 @@
             <i><sup>Fecha en la que poder comunicarnos con usted.</sup></i>
           </p>
           <p>
-            <strong>Lugar:</strong>
+            <strong>Lugar</strong>
             <select name="lugar_reparto">
               <option value="Télefono">Télefono</option>
               <option value="Tienda">Tienda</option>
@@ -594,7 +590,7 @@
             </select>
           </p>
           <p>
-            <strong>Cupón descuento:</strong>
+            <strong>Cupón descuento</strong>
             <input
               type="text"
               name="cuponDescuento"
@@ -602,7 +598,7 @@
             />
           </p>
           <p>
-            <strong>Especificaciones:</strong>
+            <strong>Especificaciones</strong>
             <textarea
               name="especificaciones"
               rows="4"
@@ -611,7 +607,6 @@
             ></textarea>
           </p>
         </fieldset>
-        <br />
         <input
           type="reset"
           name="borrar"
@@ -644,31 +639,52 @@
           href="https://www.instagram.com/"
           target="_blank"
         >
-          <img
-            src="icons/instagram.svg"
-            alt="Logo de Instagram"
-            title="Logo Insta"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-instagram"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
+            />
+          </svg>
         </a>
         <a
           href="https://www.tiktok.com/"
           target="_blank"
         >
-          <img
-            src="icons/tiktok.svg"
-            alt="Logo de Tiktok"
-            title="Logo Tiktok"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-tiktok"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"
+            />
+          </svg>
         </a>
         <a
           href="https://www.youtube.com/"
           target="_blank"
         >
-          <img
-            src="icons/youtube.svg"
-            alt="Logo de YouTube"
-            title="Logo Youtube"
-          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-youtube"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
+            />
+          </svg>
         </a>
       </nav>
 
